--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1,33 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Logowanie</title>
-    <link rel="stylesheet" href="./style/styl1.css">
+    <title>Przekierowanie...</title>
 </head>
 <body>
-    <h1>Logowanie</h1>
-    <form action="login.php" method="post">
-        <div class="container">
-            <label for="username">Nazwa uzytkownika: </label>
-            <input type="text" placeholder="Wprowadz Nazwe" name="username" required>
-            <br>
-            <label for="password">Hasło: </label>
-            <input type="password" placeholder="Wprowadz haslo" name="password" required>
-            <br>
-            <button type="submit">Login</button>
-            <br>
-            <label>
-                <input type="checkbox" checked="checked" name="remember"> Pamiętaj mnie
-            </label>
-        </div>
-        <div class="container2">
-        </div>
-        <p>Nie masz konta? <a href="register.php">Zarejestruj się</a></p>
-    </form>
-    
-</body>
-</html>
+    <script>
+        // Wysyłamy żądanie do serwera, aby sprawdzić czy użytkownik jest zalogowany
+        fetch('check_session.php')
+            .then(response => response.json())
+            .then(data => {
+                if (data.logged_in) {
+                    // Użytkownik zalogowany - idziemy do dashboard.php
+                    window.location.href = 'dashboard.php';
+                } else {
+                    // Użytkownik nie zalogowany - idziemy do login.php
+                    window.location.href = 'login.php';
+                }
+            })
+            .catch(error => {
+                // W przypadku błędu, domyślnie idziemy do login.php
+                console.error('Błąd:', error);
+                window.location.href = 'login.php';
+            });
+    </script>
 </body>
 </html>
